manifests/infra/monitoring/speedtest/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: speedtest-tracker
  namespace: monitoring
  annotations:
    ignore-check.kube-linter.io/drop-net-raw-capability: "Required for ping and speedtest functionality"
    ignore-check.kube-linter.io/run-as-non-root: "I hate s6-overlay"
    ignore-check.kube-linter.io/no-read-only-root-fs: "I hate s6-overlay"
    ignore-check.kube-linter.io/privilege-escalation-container: "I hate s6-overlay"
    ignore-check.kube-linter.io/privileged-ports: "Doesn't let you change internal bind port"
spec:
  serviceName: speedtest-tracker
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-tracker
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: speedtest-tracker
    spec:
      restartPolicy: Always
      containers:
        - name: speedtest-tracker
          image: lscr.io/linuxserver/speedtest-tracker:latest@sha256:9ebe34dd607e0b3eb8f303095d40790817e087c027cfe9224076ec8b43be5e8a
          ports:
            - containerPort: 80
          securityContext:
            allowPrivilegeEscalation: true
            readOnlyRootFilesystem: false
            capabilities:
              add: ["NET_RAW"]
            runAsNonRoot: false
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: speedtest-tracker-config
              mountPath: /config
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: 80
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: 80
            initialDelaySeconds: 30
  volumeClaimTemplates:
    - metadata:
        name: speedtest-tracker-config
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 4Gi
        storageClassName: longhorn
